crates/ignis_analyzer/tests/snapshots/golden_hir__hir_boolean_equality.snap
---
source: crates/ignis_analyzer/tests/golden_hir.rs
expression: "common::format_hir(&result)"
---
=== HIR ===


--- Definitions ---

fn compareBools(a: bool, b: bool): bool
  body:
    Block : never
      statements:
        Let(eq) : void
          init:
            Binary(Equal) : bool
              left:
                Variable(a [param]) : bool
              right:
                Variable(b [param]) : bool
        Let(ne) : void
          init:
            Binary(NotEqual) : bool
              left:
                Variable(a [param]) : bool
              right:
                Variable(b [param]) : bool
        Return : never
          Binary(And) : bool
            left:
              Variable(eq) : bool
            right:
              Variable(ne) : bool

--- Variable Initializers ---

eq: bool = Binary(Equal, Variable(a), Variable(b))
ne: bool = Binary(NotEqual, Variable(a), Variable(b))
