crates/ignis_analyzer/tests/snapshots/golden_hir__hir_cast_chain.snap
---
source: crates/ignis_analyzer/tests/golden_hir.rs
assertion_line: 127
expression: "common::format_hir(&result)"
---
=== HIR ===


--- Definitions ---

fn convert(x: i32): f64
  body:
    Block : never
      statements:
        Let(y) : void
          init:
            Cast(-> i64) : i64
              Variable(x [param]) : i32
        Return : never
          Cast(-> f64) : f64
            Variable(y) : i64

--- Variable Initializers ---

y: i64 = Cast(Variable(x) as i64)
