crates/ignis_analyzer/tests/snapshots/golden_hir__hir_comparison_operators.snap
---
source: crates/ignis_analyzer/tests/golden_hir.rs
expression: "common::format_hir(&result)"
---
=== HIR ===


--- Definitions ---

fn compare(a: i32, b: i32): bool
  body:
    Block : never
      statements:
        Let(lt) : void
          init:
            Binary(LessThan) : bool
              left:
                Variable(a [param]) : i32
              right:
                Variable(b [param]) : i32
        Let(le) : void
          init:
            Binary(LessEqual) : bool
              left:
                Variable(a [param]) : i32
              right:
                Variable(b [param]) : i32
        Let(gt) : void
          init:
            Binary(GreaterThan) : bool
              left:
                Variable(a [param]) : i32
              right:
                Variable(b [param]) : i32
        Let(ge) : void
          init:
            Binary(GreaterEqual) : bool
              left:
                Variable(a [param]) : i32
              right:
                Variable(b [param]) : i32
        Let(eq) : void
          init:
            Binary(Equal) : bool
              left:
                Variable(a [param]) : i32
              right:
                Variable(b [param]) : i32
        Let(ne) : void
          init:
            Binary(NotEqual) : bool
              left:
                Variable(a [param]) : i32
              right:
                Variable(b [param]) : i32
        Return : never
          Variable(eq) : bool

--- Variable Initializers ---

eq: bool = Binary(Equal, Variable(a), Variable(b))
ge: bool = Binary(GreaterEqual, Variable(a), Variable(b))
gt: bool = Binary(GreaterThan, Variable(a), Variable(b))
le: bool = Binary(LessEqual, Variable(a), Variable(b))
lt: bool = Binary(LessThan, Variable(a), Variable(b))
ne: bool = Binary(NotEqual, Variable(a), Variable(b))
