crates/ignis_analyzer/tests/snapshots/golden_hir__hir_complex_expression.snap
---
source: crates/ignis_analyzer/tests/golden_hir.rs
expression: "common::format_hir(&result)"
---
=== HIR ===


--- Definitions ---

fn compute(a: i32, b: i32, c: i32): i32
  body:
    Block : never
      statements:
        Return : never
          Binary(Sub) : i32
            left:
              Binary(Mul) : i32
                left:
                  Binary(Add) : i32
                    left:
                      Variable(a [param]) : i32
                    right:
                      Variable(b [param]) : i32
                right:
                  Variable(c [param]) : i32
            right:
              Binary(Div) : i32
                left:
                  Variable(a [param]) : i32
                right:
                  Variable(b [param]) : i32
