crates/ignis_analyzer/tests/snapshots/golden_hir__hir_enum_eq_builtin_call.snap
---
source: crates/ignis_analyzer/tests/golden_hir.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn main(): bool
  body:
    Block : never
      statements:
        Let(left) : void
          init:
            EnumVariant(Status::0) : enum Status
        Let(right) : void
          init:
            EnumVariant(Status::1) : enum Status
        Return : never
          BuiltinEq(enum Status, method(5)) : bool
            Reference(&) : &enum Status
              Variable(left) : enum Status
            Reference(&) : &enum Status
              Variable(right) : enum Status

--- Variable Initializers ---

left: enum Status = <complex: enum Status>
right: enum Status = <complex: enum Status>
