crates/ignis_analyzer/tests/snapshots/golden_hir__hir_logical_operators.snap
---
source: crates/ignis_analyzer/tests/golden_hir.rs
expression: "common::format_hir(&result)"
---
=== HIR ===


--- Definitions ---

fn logic(a: error, b: error): error
  body:
    Block : never
      statements:
        Let(and_result) : void
          init:
            Binary(And) : bool
              left:
                Variable(a [param]) : error
              right:
                Variable(b [param]) : error
        Let(or_result) : void
          init:
            Binary(Or) : bool
              left:
                Variable(a [param]) : error
              right:
                Variable(b [param]) : error
        Return : never
          Binary(Or) : bool
            left:
              Variable(and_result) : error
            right:
              Variable(or_result) : error

--- Variable Initializers ---

and_result: error = Binary(And, Variable(a), Variable(b))
or_result: error = Binary(Or, Variable(a), Variable(b))
