crates/ignis_analyzer/tests/snapshots/golden_hir__hir_loop_with_break.snap
---
source: crates/ignis_analyzer/tests/golden_hir.rs
expression: "common::format_hir(&result)"
---
=== HIR ===


--- Definitions ---

fn search(): i32
  body:
    Block : never
      statements:
        Let(i [mut]) : void
          init:
            Literal(Int32(0)) : i32
        Loop(while) : void
          cond:
            Literal(Boolean(true)) : bool
          body:
            Block : i32
              statements:
                If : void
                  cond:
                    Binary(GreaterThan) : bool
                      left:
                        Variable(i [mut]) : i32
                      right:
                        Literal(Int32(10)) : i32
                  then:
                    Block : never
                      statements:
                        Break : never
                ExprStmt : i32
                  Assign(=) : i32
                    target:
                      Variable(i [mut]) : i32
                    value:
                      Binary(Add) : i32
                        left:
                          Variable(i [mut]) : i32
                        right:
                          Literal(Int32(1)) : i32
        Return : never
          Variable(i [mut]) : i32

--- Variable Initializers ---

i: i32 [mut] = Literal(Int32(0))
