crates/ignis_analyzer/tests/snapshots/golden_hir__hir_loop_with_continue.snap
---
source: crates/ignis_analyzer/tests/golden_hir.rs
assertion_line: 84
expression: "common::format_hir(&result)"
---
=== HIR ===


--- Definitions ---

fn skip_evens(): i32
  body:
    Block : never
      statements:
        Let(sum [mut]) : void
          init:
            Literal(Int32(0)) : i32
        Let(i [mut]) : void
          init:
            Literal(Int32(0)) : i32
        Loop(while) : void
          cond:
            Binary(LessThan) : bool
              left:
                Variable(i [mut]) : i32
              right:
                Literal(Int32(10)) : i32
          body:
            Block : i32
              statements:
                ExprStmt : i32
                  Assign(=) : i32
                    target:
                      Variable(i [mut]) : i32
                    value:
                      Binary(Add) : i32
                        left:
                          Variable(i [mut]) : i32
                        right:
                          Literal(Int32(1)) : i32
                If : error
                  cond:
                    Binary(Equal) : bool
                      left:
                        Binary(Mod) : i32
                          left:
                            Variable(i [mut]) : i32
                          right:
                            Literal(Int32(2)) : i32
                      right:
                        Literal(Int32(0)) : i32
                  then:
                    Block : never
                      statements:
                        Continue : never
                ExprStmt : i32
                  Assign(=) : i32
                    target:
                      Variable(sum [mut]) : i32
                    value:
                      Binary(Add) : i32
                        left:
                          Variable(sum [mut]) : i32
                        right:
                          Variable(i [mut]) : i32
        Return : never
          Variable(sum [mut]) : i32

--- Variable Initializers ---

i: i32 [mut] = Literal(Int32(0))
sum: i32 [mut] = Literal(Int32(0))
