crates/ignis_analyzer/tests/snapshots/golden_hir__hir_multiple_declarations.snap
---
source: crates/ignis_analyzer/tests/golden_hir.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Declarations ---

fn print(s: string): void  [extern]

--- Definitions ---

fn helper(): i32
  body:
    Block : never
      statements:
        Return : never
          Literal(Int32(42)) : i32

fn main(): void
  body:
    Block : never
      statements:
        Let(x) : void
          init:
            Call(helper) : i32
        Return : never

--- Variable Initializers ---

x: i32 = Call(helper) {  }
