crates/ignis_analyzer/tests/snapshots/golden_hir__hir_nested_blocks.snap
---
source: crates/ignis_analyzer/tests/golden_hir.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn main(): void
  body:
    Block : never
      statements:
        Block : void
          statements:
            Let(x) : void
              init:
                Literal(Int32(1)) : i32
            Block : void
              statements:
                Let(y) : void
                  init:
                    Literal(Int32(2)) : i32
        Return : never

--- Variable Initializers ---

x: i32 = Literal(Int32(1))
y: i32 = Literal(Int32(2))
