crates/ignis_analyzer/tests/snapshots/golden_hir__hir_nested_if.snap
---
source: crates/ignis_analyzer/tests/golden_hir.rs
expression: "common::format_hir(&result)"
---
=== HIR ===


--- Definitions ---

fn classify(x: i32): i32
  body:
    Block : never
      statements:
        If : never
          cond:
            Binary(GreaterThan) : bool
              left:
                Variable(x [param]) : i32
              right:
                Literal(Int32(0)) : i32
          then:
            Block : never
              statements:
                If : never
                  cond:
                    Binary(GreaterThan) : bool
                      left:
                        Variable(x [param]) : i32
                      right:
                        Literal(Int32(10)) : i32
                  then:
                    Block : never
                      statements:
                        Return : never
                          Literal(Int32(2)) : i32
                  else:
                    Block : never
                      statements:
                        Return : never
                          Literal(Int32(1)) : i32
          else:
            Block : never
              statements:
                Return : never
                  Literal(Int32(0)) : i32
