crates/ignis_analyzer/tests/snapshots/golden_hir__hir_pipe_desugars_to_call.snap
---
source: crates/ignis_analyzer/tests/golden_hir.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn add(a: i32, b: i32): i32
  body:
    Block : never
      statements:
        Return : never
          Binary(Add) : i32
            left:
              Variable(a [param]) : i32
            right:
              Variable(b [param]) : i32

fn main(): i32
  body:
    Block : never
      statements:
        Return : never
          Call(add) : i32
            args:
              [0]:
                Literal(Int32(5)) : i32
              [1]:
                Literal(Int32(7)) : i32
